--- a/LotteryPool/www/templates/menu.html
+++ b/LotteryPool/www/templates/menu.html
@@ -22,13 +22,13 @@
           Login
         </ion-item>
         <ion-item menu-close href="#/app/search">
-          Search
+          View Active Pools
         </ion-item>
         <ion-item menu-close href="#/app/browse">
-          Browse
+          Find Pools
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item menu-close href="#/app/mainPage">
+          Logout
         </ion-item>
       </ion-list>
     </ion-content>
