Minor updates/general modifications

--- a/LotteryPool/www/lib/ionic/scss/_platform.scss
+++ b/LotteryPool/www/lib/ionic/scss/_platform.scss
@@ -65,7 +65,7 @@
 }
 
 @media (orientation:landscape) {
-  .platform-ios.platform-browser.platform-ipad {
+  .platform-ios.platform-browsePoolsr.platform-ipad {
     position: fixed; // required for iPad 7 Safari
   }
 }
