--- a/LotteryPool/www/lib/ionic/scss/ionicons/_ionicons-icons.scss
+++ b/LotteryPool/www/lib/ionic/scss/ionicons/_ionicons-icons.scss
@@ -297,8 +297,8 @@
 .#{$ionicons-prefix}ios-box-outline:before,
 .#{$ionicons-prefix}ios-briefcase:before,
 .#{$ionicons-prefix}ios-briefcase-outline:before,
-.#{$ionicons-prefix}ios-browsers:before,
-.#{$ionicons-prefix}ios-browsers-outline:before,
+.#{$ionicons-prefix}ios-browsePoolsrs:before,
+.#{$ionicons-prefix}ios-browsePoolsrs-outline:before,
 .#{$ionicons-prefix}ios-calculator:before,
 .#{$ionicons-prefix}ios-calculator-outline:before,
 .#{$ionicons-prefix}ios-calendar:before,
@@ -1033,8 +1033,8 @@
 .#{$ionicons-prefix}ios-box-outline:before { content: $ionicon-var-ios-box-outline; }
 .#{$ionicons-prefix}ios-briefcase:before { content: $ionicon-var-ios-briefcase; }
 .#{$ionicons-prefix}ios-briefcase-outline:before { content: $ionicon-var-ios-briefcase-outline; }
-.#{$ionicons-prefix}ios-browsers:before { content: $ionicon-var-ios-browsers; }
-.#{$ionicons-prefix}ios-browsers-outline:before { content: $ionicon-var-ios-browsers-outline; }
+.#{$ionicons-prefix}ios-browsePoolsrs:before { content: $ionicon-var-ios-browsePoolsrs; }
+.#{$ionicons-prefix}ios-browsePoolsrs-outline:before { content: $ionicon-var-ios-browsePoolsrs-outline; }
 .#{$ionicons-prefix}ios-calculator:before { content: $ionicon-var-ios-calculator; }
 .#{$ionicons-prefix}ios-calculator-outline:before { content: $ionicon-var-ios-calculator-outline; }
 .#{$ionicons-prefix}ios-calendar:before { content: $ionicon-var-ios-calendar; }
