--- a/LotteryPool/www/lib/ionic/css/ionic.css
+++ b/LotteryPool/www/lib/ionic/css/ionic.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 /*!
  * Copyright 2015 Drifty Co.
  * http://drifty.com/
@@ -326,8 +326,8 @@
 .ion-ios-box-outline:before,
 .ion-ios-briefcase:before,
 .ion-ios-briefcase-outline:before,
-.ion-ios-browsers:before,
-.ion-ios-browsers-outline:before,
+.ion-ios-browsePoolsrs:before,
+.ion-ios-browsePoolsrs-outline:before,
 .ion-ios-calculator:before,
 .ion-ios-calculator-outline:before,
 .ion-ios-calendar:before,
@@ -1661,10 +1661,10 @@
 .ion-ios-briefcase-outline:before {
   content: ""; }
 
-.ion-ios-browsers:before {
+.ion-ios-browsePoolsrs:before {
   content: ""; }
 
-.ion-ios-browsers-outline:before {
+.ion-ios-browsePoolsrs-outline:before {
   content: ""; }
 
 .ion-ios-calculator:before {
@@ -3020,7 +3020,7 @@ q:before, q:after {
   content: none; }
 
 /**
- * Prevent modern browsers from displaying `audio` without controls.
+ * Prevent modern browsePoolsrs from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
 audio:not([controls]) {
@@ -3104,7 +3104,7 @@ dfn {
   font-style: italic; }
 
 /**
- * Address differences between Firefox and other browsers.
+ * Address differences between Firefox and other browsePoolsrs.
  */
 hr {
   -moz-box-sizing: content-box;
@@ -3122,7 +3122,7 @@ samp {
   font-family: monospace, serif; }
 
 /**
- * Improve readability of pre-formatted text in all browsers.
+ * Improve readability of pre-formatted text in all browsePoolsrs.
  */
 pre {
   white-space: pre-wrap; }
@@ -3134,13 +3134,13 @@ q {
   quotes: "\201C" "\201D" "\2018" "\2019"; }
 
 /**
- * Address inconsistent and variable font size in all browsers.
+ * Address inconsistent and variable font size in all browsePoolsrs.
  */
 small {
   font-size: 80%; }
 
 /**
- * Prevent `sub` and `sup` affecting `line-height` in all browsers.
+ * Prevent `sub` and `sup` affecting `line-height` in all browsePoolsrs.
  */
 sub,
 sup {
@@ -3174,8 +3174,8 @@ legend {
   /* 1 */ }
 
 /**
- * 1. Correct font family not being inherited in all browsers.
- * 2. Correct font size not being inherited in all browsers.
+ * 1. Correct font family not being inherited in all browsePoolsrs.
+ * 2. Correct font size not being inherited in all browsePoolsrs.
  * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
  * 4. Remove any default :focus styles
  * 5. Make sure webkit font smoothing is being inherited
@@ -3274,7 +3274,7 @@ input::-moz-focus-inner {
 
 /**
  * 1. Remove default vertical scrollbar in IE 8/9.
- * 2. Improve readability and alignment in all browsers.
+ * 2. Improve readability and alignment in all browsePoolsrs.
  */
 textarea {
   overflow: auto;
@@ -3925,8 +3925,8 @@ a.subdued {
     .bar.bar-light.bar-footer {
       background-image: linear-gradient(180deg, #ddd, #ddd 50%, transparent 50%); }
   .bar.bar-stable {
-    border-color: #b2b2b2;
-    background-color: #f8f8f8;
+    border-color: #444;
+    background-color: #fff;
     background-image: linear-gradient(0deg, #b2b2b2, #b2b2b2 50%, transparent 50%);
     color: #444; }
     .bar.bar-stable .title {
@@ -9553,7 +9553,7 @@ a.button {
   margin-bottom: 20px; }
 
 @media (orientation: landscape) {
-  .platform-ios.platform-browser.platform-ipad {
+  .platform-ios.platform-browsePoolsr.platform-ipad {
     position: fixed; } }
 
 .platform-c:not(.enable-transitions) * {
