--- a/LotteryPool/www/lib/ionic/scss/_mixins.scss
+++ b/LotteryPool/www/lib/ionic/scss/_mixins.scss
@@ -417,7 +417,7 @@
 
 // Backface visibility
 // --------------------------------------------------
-// Prevent browsers from flickering when using CSS 3D transforms.
+// Prevent browsePoolsrs from flickering when using CSS 3D transforms.
 // Default value is `visible`, but can be changed to `hidden
 
 @mixin backface-visibility($visibility){
