--- a/LotteryPool/www/templates/mainPage.html
+++ b/LotteryPool/www/templates/mainPage.html
@@ -1,9 +1,5 @@
 <ion-view view-title="Lottery Pool">
-  <ion-content>
-    <ion-list>
-      <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
-        {{playlist.title}}
-      </ion-item>
-    </ion-list>
+  <ion-content  scrollbar-x="false">
+    <h3> Welcome </h3>
   </ion-content>
 </ion-view>
