--- a/LotteryPool/www/templates/menu.html
+++ b/LotteryPool/www/templates/menu.html
@@ -16,7 +16,7 @@
     <ion-header-bar class="bar-stable">
       <h1 class="title">Account Management</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content  class="hidebar">
       <ion-list>
         <ion-item menu-close ng-click="login()">
           Login
