--- a/LotteryPool/www/templates/playlist.html
+++ b/LotteryPool/www/templates/playlist.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Playlist">
-  <ion-content>
+  <ion-content 
+    [scrollbar-x=""]
+    [scrollbar-y=""]>
     <h1>LotteryPool</h1>
   </ion-content>
 </ion-view>
