Menu item updates, page additions, and more
Registration page added, backend communication logic enabled. Changed
menu to appear as pre-logged in menu. Added a controller to manage page
changes. TODO: Change menu to post-login-menu after login/registration

--- a/LotteryPool/www/templates/mainPage.html
+++ b/LotteryPool/www/templates/mainPage.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Lottery Pool">
   <ion-content  scrollbar-x="false">
-    <h3> Welcome </h3>
+      <img src="../img/welcomeScreen.jpg" class="center"/>
   </ion-content>
 </ion-view>
