minor bugs fixed

--- a/LotteryPool/www/templates/register.html
+++ b/LotteryPool/www/templates/register.html
@@ -10,9 +10,11 @@
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Name</span>
+                    <input type="text" ng-model="userInformation.username">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Email</span>
+                    <input type="text" ng-model="userInformation.username">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Username</span>
@@ -20,9 +22,10 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Password</span>
+                    <input type="password" ng-model="userInformation.password">
                 </label>
                 <label class="item item-input">
-                    <span class="input-label">Re-type Password"</span>
+                    <span class="input-label">Re-type Password</span>
                     <input type="password" ng-model="userInformation.password">
                 </label>
                 <label class="item">
