--- a/LotteryPool/www/templates/alternateMenu.html
+++ b/LotteryPool/www/templates/alternateMenu.html
@@ -1,4 +1,4 @@
-﻿<ion-side-menus enable-menu-with-back-views="false">
+﻿<ion-side-menus enable-menu-with-back-views="false" ng-if="!log.loggedIn">
     <ion-side-menu-content>
         <ion-nav-bar class="bar-stable">
             <ion-nav-back-button>
@@ -25,3 +25,35 @@
         </ion-content>
     </ion-side-menu>
 </ion-side-menus>
+
+<ion-side-menus enable-menu-with-back-views="false" ng-if="log.loggedIn">
+    <ion-side-menu-content>
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-back-button>
+            </ion-nav-back-button>
+            <ion-nav-buttons side="left">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+            </ion-nav-buttons>
+        </ion-nav-bar>
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
+    <ion-side-menu side="left">
+        <ion-header-bar class="bar-stable">
+            <h1 class="title">Account Management</h1>
+        </ion-header-bar>
+        <ion-content class="hidebar">
+            <ion-list>
+                <ion-item menu-close href="#/app/search">
+                    View Active Pools
+                </ion-item>
+                <ion-item menu-close href="#/app/browse">
+                    Find Pools
+                </ion-item>
+                <ion-item menu-close href="#/app/mainPage" ng-click="logout()">
+                    Logout
+                </ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-side-menu>
+</ion-side-menus>
+
