--- a/LotteryPool/www/templates/browse.html
+++ b/LotteryPool/www/templates/browse.html
@@ -1,5 +1,5 @@
 <ion-view view-title="browsePools">
   <ion-content>
-    <h1>ANYTHING</h1>
+    <h1>Browse Pools Coming Soon</h1>
   </ion-content>
 </ion-view>
