--- a/LotteryPool/www/templates/register.html
+++ b/LotteryPool/www/templates/register.html
@@ -10,11 +10,11 @@
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Name</span>
-                    <input type="text" ng-model="userInformation.username">
+                    <input type="text" ng-model="userInformation.name">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Email</span>
-                    <input type="text" ng-model="userInformation.username">
+                    <input type="text" ng-model="userInformation.use">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Username</span>
@@ -26,7 +26,7 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Re-type Password</span>
-                    <input type="password" ng-model="userInformation.password">
+                    <input type="password" ng-model="userInformation.password2">
                 </label>
                 <label class="item">
                     <button class="button button-block button-positive" type="submit">Register</button>
