minor image fixes

--- a/LotteryPool/www/templates/mainPage.html
+++ b/LotteryPool/www/templates/mainPage.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Lottery Pool">
   <ion-content  scrollbar-x="false">
-      <img src="../img/welcomeScreen.jpg" class="center"/>
+     <div class="item item-image" style="height: auto">
+       <img src="../img/welcomeScreen.jpg" class="center"/>
+     </div>
   </ion-content>
 </ion-view>
