--- a/LotteryPool/www/templates/alternateMenu.html
+++ b/LotteryPool/www/templates/alternateMenu.html
@@ -1,4 +1,4 @@
-﻿<ion-side-menus enable-menu-with-back-views="false" ng-if="!log.loggedIn">
+﻿<ion-side-menus enable-menu-with-back-views="false" ng-if="loggedOut">
     <ion-side-menu-content>
         <ion-nav-bar class="bar-stable">
             <ion-nav-back-button>
@@ -26,7 +26,7 @@
     </ion-side-menu>
 </ion-side-menus>
 
-<ion-side-menus enable-menu-with-back-views="false" ng-if="log.loggedIn">
+<ion-side-menus enable-menu-with-back-views="false" ng-if="loggedIn">
     <ion-side-menu-content>
         <ion-nav-bar class="bar-stable">
             <ion-nav-back-button>
