color edit on menu button and close , partial fix for logout bug.

--- a/LotteryPool/www/lib/ionic/css/ionic.css
+++ b/LotteryPool/www/lib/ionic/css/ionic.css
@@ -4127,7 +4127,7 @@ a.subdued {
     border-color: transparent;
     background: none;
     box-shadow: none;
-    color: #444;
+    color: #fff;
     font-size: 17px; }
   .bar-stable .button.button-icon {
     border-color: transparent;
@@ -8841,7 +8841,7 @@ progress {
     border-color: transparent;
     background: none;
     box-shadow: none;
-    color: #b2b2b2; }
+    color: #fff; }
   .button-clear.button-icon {
     border-color: transparent;
     background: none; }
