--- a/LotteryPool/www/templates/alternateMenu.html
+++ b/LotteryPool/www/templates/alternateMenu.html
@@ -1,4 +1,4 @@
-﻿<ion-side-menus enable-menu-with-back-views="false" ng-if="loggedOut">
+﻿<ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
         <ion-nav-bar class="bar-stable">
             <ion-nav-back-button>
@@ -9,7 +9,7 @@
         </ion-nav-bar>
         <ion-nav-view name="menuContent"></ion-nav-view>
     </ion-side-menu-content>
-    <ion-side-menu side="left">
+    <ion-side-menu side="left"  ng-if="loggedOut">
         <ion-header-bar class="bar-stable">
             <h1 class="title">Getting Started</h1>
         </ion-header-bar>
@@ -24,20 +24,7 @@
             </ion-list>
         </ion-content>
     </ion-side-menu>
-</ion-side-menus>
-
-<ion-side-menus enable-menu-with-back-views="false" ng-if="loggedIn">
-    <ion-side-menu-content>
-        <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
-            <ion-nav-buttons side="left">
-                <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
-            </ion-nav-buttons>
-        </ion-nav-bar>
-        <ion-nav-view name="menuContent"></ion-nav-view>
-    </ion-side-menu-content>
-    <ion-side-menu side="left">
+    <ion-side-menu side="left" ng-if="loggedIn">
         <ion-header-bar class="bar-stable">
             <h1 class="title">Account Management</h1>
         </ion-header-bar>
@@ -56,4 +43,3 @@
         </ion-content>
     </ion-side-menu>
 </ion-side-menus>
-
