--- a/LotteryPool/www/templates/register.html
+++ b/LotteryPool/www/templates/register.html
@@ -14,11 +14,11 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Email</span>
-                    <input type="text" ng-model="userInformation.use">
+                    <input type="text" ng-model="userInformation.email">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Username</span>
-                    <input type="text" ng-model="userInformation.username">
+                    <input type="text" ng-model="userInformation.userName">
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Password</span>
@@ -26,7 +26,7 @@
                 </label>
                 <label class="item item-input">
                     <span class="input-label">Re-type Password</span>
-                    <input type="password" ng-model="userInformation.password2">
+                    <input type="password" ng-model="passwordVerification">
                 </label>
                 <label class="item">
                     <button class="button button-block button-positive" type="submit">Register</button>
