--- a/LotteryPool/www/templates/register.html
+++ b/LotteryPool/www/templates/register.html
@@ -24,9 +24,12 @@
                     <span class="input-label">Password</span>
                     <input type="password" ng-model="userInformation.password">
                 </label>
-                <label class="item item-input">
+                <!--
+                    Edit later to perform password verification at registration
+                    <label class="item item-input">
                     <span class="input-label">Re-type Password</span>
                     <input type="password" ng-model="passwordVerification">
+                    -->
                 </label>
                 <label class="item">
                     <button class="button button-block button-positive" type="submit">Register</button>
