Single Ticket page Styled/formatted

--- a/LotteryPool/www/css/style.css
+++ b/LotteryPool/www/css/style.css
@@ -4,3 +4,22 @@
     margin-right: auto;
     display: block;
 }
+
+.tickettext{
+    padding-top:3em;
+    font-size: 18.5px;
+    text-align: center;
+}
+
+.pbIndicator{
+    padding-top:3em;
+    font-size: 12px;
+    text-align: center;
+    padding-left: 190px;
+}
+
+.pbnumber{
+    font-size: 22px;
+    text-align: center;
+}
+
