--- a/LotteryPool/www/templates/ticket.html
+++ b/LotteryPool/www/templates/ticket.html
@@ -1,7 +1,7 @@
 ﻿<ion-view view-title="Your Ticket">
     <ion-content>
-        <div class="item item-image" style="height: auto">
-            <img src="img/powerball.png" class="center">
+        <div class="item-image" style="height: auto; padding-top:0.5em">
+            <img src="img/powerball.png" class="center" border="0">
         </div>
         <div class="tickettext">
             power play - <b>{{ticketSelect.pp}}</b>
