started pool display, added tab options - logout bug still needs fixed

--- a/LotteryPool/www/templates/alternateMenu.html
+++ b/LotteryPool/www/templates/alternateMenu.html
@@ -34,12 +34,15 @@
                     My Tickets
                 </ion-item>
                 <ion-item menu-close href="#/app/search">
-                    View Active Pools
+                    My Pools
+                </ion-item>
+                <ion-item menu-close href="#/app/browse">
+                    Buy Tickets
                 </ion-item>
                 <ion-item menu-close href="#/app/browse">
                     Find Pools
                 </ion-item>
-                <ion-item menu-close ng-click="logout()" href="#/app/mainPage">
+                <ion-item menu-close href="#/app/mainPage" ng-click="logout()">
                     Logout
                 </ion-item>
             </ion-list>
