--- a/LotteryPool/www/templates/alternateMenu.html
+++ b/LotteryPool/www/templates/alternateMenu.html
@@ -37,9 +37,9 @@
                     My Pools
                 </ion-item>
                 <ion-item menu-close href="#/app/browse">
-                    Buy Tickets
+                    Purchase Tickets
                 </ion-item>
-                <ion-item menu-close href="#/app/browse">
+                <ion-item menu-close href="#/app/findLotteryPool">
                     Find Pools
                 </ion-item>
                 <ion-item menu-close href="#/app/mainPage" ng-click="logout()">
