--- a/LotteryPool/www/templates/ticket.html
+++ b/LotteryPool/www/templates/ticket.html
@@ -1,4 +1,4 @@
-﻿<ion-view view-title="Your Ticket">
+﻿<ion-view view-title="Ticket: {{ticketSelect.id}}">
     <ion-content>
         <div class="item-image" style="height: auto; padding-top:0.5em">
             <img src="img/powerball.png" class="center" border="0">
