Minor changes - might break app

--- a/LotteryPool/www/templates/alternateMenu.html
+++ b/LotteryPool/www/templates/alternateMenu.html
@@ -42,7 +42,7 @@
                 <ion-item menu-close href="#/app/findLotteryPool">
                     Find Pools
                 </ion-item>
-                <ion-item menu-close href="#/app/mainPage" ng-click="logout()">
+                <ion-item menu-close ng-click="logout()">
                     Logout
                 </ion-item>
             </ion-list>
