Ticket purchasing/display is live and updates

--- a/LotteryPool/www/templates/browse.html
+++ b/LotteryPool/www/templates/browse.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Purchase Powerball Tickets">
   <ion-content style=" overflow: hidden">
-      <form>
+      <form ng-submit="addTicket()">
         <div class="greentitle" style="padding-top:1em;">
             <b>Select Your Numbers: </b>
         </div>
