--- a/LotteryPool/www/templates/ticket.html
+++ b/LotteryPool/www/templates/ticket.html
@@ -4,13 +4,13 @@
             <img src="img/powerball.png" class="center" border="0">
         </div>
         <div class="tickettext">
-            power play - <b>{{ticketSelect.pp}}</b>
+            power play - <b>{{ticketSelect.powerplay}}</b>
         </div>
         <div class="pbIndicator">     
             Powerball
         </div>
         <div class="pbnumber">      
-          A. <b>{{ticketSelect.ticknum}}</b>
+          A. <b>{{ticketSelect.number}}</b>
         </div>
         <div class="tickettext">
             draw date: {{ticketSelect.date}}
