--- a/LotteryPool/www/templates/browse.html
+++ b/LotteryPool/www/templates/browse.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div style="text-align:center; padding-top:2em">
-            <button class="button button-positive" type="submit">Purchase Ticket</button>
+            <button class="button button-positive" type="submit" href = "#/app/payment">Purchase Ticket</button>
         </div>
       </form>
   </ion-content>
