Test edits -- DELETE WHEN FINISHED

--- a/LotteryPool/www/templates/alternateMenu.html
+++ b/LotteryPool/www/templates/alternateMenu.html
@@ -30,7 +30,7 @@
         </ion-header-bar>
         <ion-content class="hidebar">
             <ion-list>
-                <ion-item menu-close href="#/app/tickets">
+                <ion-item menu-close href="#/app/payment">
                     My Tickets
                 </ion-item>
                 <ion-item menu-close href="#/app/search">
