Additional path access complete, Backend connections finished, user information updates dynamically. User pool page complete

--- a/LotteryPool/www/templates/alternateMenu.html
+++ b/LotteryPool/www/templates/alternateMenu.html
@@ -30,7 +30,7 @@
         </ion-header-bar>
         <ion-content class="hidebar">
             <ion-list>
-                <ion-item menu-close href="#/app/payment">
+                <ion-item menu-close href="#/app/tickets">
                     My Tickets
                 </ion-item>
                 <ion-item menu-close href="#/app/search">
