--- a/LotteryPool/www/lib/ionic/css/ionic.css
+++ b/LotteryPool/www/lib/ionic/css/ionic.css
@@ -8624,6 +8624,10 @@ progress {
     border-color: transparent;
     background-color: #387ef5;
     color: #fff; }
+  .button.button-positive-falsify {
+    border-color: transparent;
+    background-color: #A4A4A4;
+    color: #fff; }
     .button.button-positive:hover {
       color: #fff;
       text-decoration: none; }
